--- a/Classification_KNN_sklearn.ipynb
+++ b/Classification_KNN_sklearn.ipynb
@@ -168,7 +168,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = pd.read_csv(r'E:\\StudyMaterial\\Imarticus\\PGAA 6\\Exercises\\KNN_LMS\\Dataset\\Mobile_data.csv', header = 0)"
+    "data = pd.read_csv(r'https://raw.githubusercontent.com/nikunj1895/Mobile_Price-range_Classification_using_KNN/master/Dataset/Mobile_data.csv', header = 0)"
    ]
   },
   {
